--- a/.github/workflows/build_and_test_all.yml
+++ b/.github/workflows/build_and_test_all.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
-          npm install minify html-minifier-terser -g
+          npm ci
       - name: Install library dependencies
         run: pio lib -g install 1
       - name: Run tests Owie
